--- a/hosted/style.css
+++ b/hosted/style.css
@@ -49,7 +49,7 @@ nav:nth-child(1) {
 
 .domoForm {
     border: 2px solid #338acc;
-    height: 35px;
+    height: 50px;
     width: 700px;
     margin-top:0px;
     padding-top:10px;
@@ -253,6 +253,15 @@ h3.domoAge {
     width: 100px;
     font-weight: bold;
     padding-right: 40px;
+    font-size: 1.5em;
+}
+
+h3.domoLevel {
+    float:left;
+    text-align: left;
+    width: 100px;
+    font-weight: bold;
+    padding-left: 20px;
     font-size: 1.5em;
 }
 
