--- a/views/changePassword.handlebars
+++ b/views/changePassword.handlebars
@@ -8,7 +8,7 @@
 <body>
   <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
-    <div class="navlink"><a href="/changePassword">Change Password</a></div>
+    <div class="navlink"><a href="/maker">Back To Maker</a></div>
   </nav>
 
   <section id="app">
@@ -20,6 +20,6 @@
     <h3><span id="errorMessage"></span></h3>
     <img id="domo" src="assets/img/domo.png" alt="domo"/>
   </div>
-  <script src="/assets/appBundle.js"></script>
+  <script src="/assets/changePasswordBundle.js"></script>
 </body>
 </html>
